# SmartCC_model

./: .gitignore  CapsNet.py  README.md  capsulelayers.py  config.py  dataset.py  eval.py  gb.py  hdf_test.py  hdf_train.py  hdf_validation.py  model_eval.py  model_train.py  optimize.py  pyproject.toml  small.py  sweep.yaml  train.py  tt.py  utils.py
config/: config.json
data_loader/: data_loaders.py  dataset.py
model/: capsule_layers.py  capsule_net.py  capsulenet.py
re/: main.py
re/config/: config.json
re/data_loader/: data_loaders.py  dataset.py
re/model/: capsule_layers.py  capsule_net.py
re/trainers/: trainer.py
re/utils/: config.py  main.py
trainers/: trainer.py
utils/: utils.py
