[tool.poetry]
name = "capsulenet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<2"
pandas = "^2.2.2"
torch = "^2.3.1"
librosa = "*"
h5py = "^3.11.0"
soxr = "^0.3.7"
wandb = "^0.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
