[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
librosa = "^0.10.2.post1"
wandb = "^0.17.3"
tqdm = "^4.66.4"
torchvision = "^0.18.1"
h5py = "^3.11.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
numpy = "^1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
