[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {url = "https://download.pytorch.org/whl/nightly/cu121/torch-2.0.0.dev20230207+cu121-cp310-cp310-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/nightly/cu121/torchvision-0.13.0.dev20230207+cu121-cp310-cp310-linux_x86_64.whl"}
torchaudio = {url = "https://download.pytorch.org/whl/nightly/cu121/torchaudio-0.13.0.dev20230207+cu121-cp310-cp310-linux_x86_64.whl"}
librosa = "^0.10.2.post1"
wandb = "^0.17.3"
tqdm = "^4.66.4"
h5py = "^3.11.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
numpy = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
